--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <title>TerraMia - Cesta k slobode</title>
+    <title>TerraMia | Cesta k slobode</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-S5SBWV2Z8F"></script>
