--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Chcete sa starať o seba a svoju rodinu použitím prírodných riešení čo najvýhodnejšie? Chcete nakupovať a získavať darčeky bezpečne? Esenciálne oleje doTERRA sú 100% prírodné, bezpečné a cenovo výhodné."
     />
+    <meta name="facebook-domain-verification" content="9y0xf02hfzm3hvh8kvxtcxll18spll" />
 
     <link rel="icon" type="image/png" sizes="256x256" href="favicon.ico">
 
